# disks

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  rust.yml
disks/: Cargo.toml  build.rs  justfile
disks-common/: Cargo.toml
disks-common/src/: create_partition_info.rs  partition.rs
disks-dbus/: Cargo.toml
disks-dbus/src/: lib.rs
disks-dbus/src/disks/: drive.rs  manager.rs  mod.rs  partition.rs  partition_type.rs
disks-ui/: Cargo.toml  README.md  build.rs
disks-ui/i18n/en/: disks-ui.ftl
disks-ui/i18n/sv/: disks_ui.ftl
disks-ui/resources/: app.desktop
disks-ui/src/: app.rs  i18n.rs  main.rs
disks-ui/src/utils/: format.rs  mod.rs  ui.rs
disks-ui/src/views/: about.rs  dialogs.rs  menu.rs  mod.rs  volumes.rs
disks/i18n/en/: cosmos_disks.ftl
disks/resources/: app.desktop  app.metainfo.xml
disks/src/: app.rs  main.rs
disks/src/utils/: mod.rs  ui.rs
disks/src/views/: dialogs.rs  menu.rs  volumes.rs
hw/hardware/: Cargo.toml
hw/hardware-common/: Cargo.toml
hw/hardware-common/src/: create_partition_info.rs  drive.rs  format.rs  lib.rs  partition.rs  partition_type.rs  usage.rs
hw/hardware-dbus/: Cargo.toml
hw/hardware-dbus/src/disks/: drive.rs  manager.rs  mod.rs  partition.rs
hw/hardware-disks-rs/: Cargo.toml
hw/hardware-disks-rs/src/: main.rs
hw/hardware/src/: lib.rs
