[workspace]
members = [
    "disks-dbus",
    "disks",
]
default-members = ["disks"]
resolver = "2"

[workspace.dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.9.2"
open = "5.3.0"
rust-embed = "8.5.0"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.41"
anyhow = "1.0.95"
duct = "0.13.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
which = "7.0.1"
udisks2 = "0.3.1"
zbus = "5.5.0"
zbus_macros = "5.5.0"
tracing-subscriber = "0.3.19"
num-format = "0.4.4"


disks-dbus = { path = "disks-dbus" }

# build dependencies
vergen = { version = "8", features = ["git", "gitcl"] }


[workspace.dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[workspace.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]


# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.


# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
