[workspace]
members = [
    "hw/hardware-dbus",
    "disks-ui", "hw/hardware-common", "hw/hardware", "hw/hardware-disks-rs",
]
default-members = ["disks-ui", "hw/hardware-disks-rs"]
resolver = "2"

[workspace.dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.9.4"
open = "5.3.2"
rust-embed = "8.7.2"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
anyhow = "1.0.98"
duct = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
which = "8.0.0"
udisks2 = "0.3.1"
zbus = "5.7.1"
zbus_macros = "5.7.1"
tracing-subscriber = "0.3.19"
num-format = "0.4.4"
futures = "0.3.31"
enumflags2 = "0.7.12"


# workspace dependencies
hardware = { path = "hw/hardware" }
hardware-dbus = { path = "hw/hardware-dbus" }
hardware-common = { path = "hw/hardware-common" }
hardware-disks-rs = { path = "hw/hardware-disks-rs" }

# build dependencies
vergen = { version = "9.0",  features = ["build", "cargo", "rustc", "si"]  }
vergen-git2 = {version = "1.0.7" }
vergen-gitcl = {version  = "1.0.8" }


[workspace.dependencies.disks-rs]
git = "https://github.com/AerynOS/disks-rs.git"
package = "disks"

[workspace.dependencies.disks-rs-superblock]
git = "https://github.com/AerynOS/disks-rs.git"
package = "superblock"

[workspace.dependencies.disks-rs-partitioning]
git = "https://github.com/AerynOS/disks-rs.git"
package = "partitioning"



[workspace.dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[workspace.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]


# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.


# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
