[package]
name = "disks-dbus"
version = "0.1.0"
edition = "2021"

[dependencies]
udisks2 = { workspace = true }
zbus = { workspace = true }
tokio = { workspace = true }
zbus_macros = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
futures = "0.3.31"
enumflags2 = "0.7.11"
