[package]
name = "disks"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "A Disk utility for the COSMIC™ desktop"
repository = "https://github.com/stoorps/disks.git"

[build-dependencies]
vergen = { workspace = true }
vergen-git2 = { workspace = true }
vergen-gitcl = { workspace = true }

[dependencies]
futures-util = { workspace = true }
i18n-embed-fl = { workspace = true }
open = { workspace = true }
rust-embed = { workspace = true }
tokio = { workspace = true }
i18n-embed = { workspace = true }
libcosmic = { workspace = true }
tracing-subscriber = { workspace = true }

disks-dbus = { workspace = true }
num-format = { workspace = true}
anyhow = { workspace = true }
