[package]
name = "hardware-disks-rs"
description = "DBus interface for disk management"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
hardware-common = { workspace = true }
disks-rs = { workspace = true }
disks-rs-partitioning = { workspace = true }
disks-rs-superblock = { workspace = true }
disks-rs-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }